[gd_scene load_steps=9 format=3 uid="uid://mc7his0230o4"]

[ext_resource type="Script" path="res://scenes/game_over_menu.gd" id="1_kaubm"]
[ext_resource type="Texture2D" uid="uid://bqjkmi0odbocm" path="res://art/popupMenu.png" id="1_xapo3"]
[ext_resource type="FontFile" uid="uid://ddmsbwqyya44t" path="res://art/m6x11.ttf" id="2_k8etd"]
[ext_resource type="Theme" uid="uid://b0gks4806w8al" path="res://scenes/menus.tres" id="3_reh6t"]

[sub_resource type="LabelSettings" id="LabelSettings_f4frt"]
font = ExtResource("2_k8etd")
font_size = 48
font_color = Color(0.67451, 0.196078, 0.196078, 1)

[sub_resource type="LabelSettings" id="LabelSettings_umx1i"]
font = ExtResource("2_k8etd")
font_size = 32
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eove6"]

[sub_resource type="LabelSettings" id="LabelSettings_ba1w8"]
font = ExtResource("2_k8etd")
font_size = 32
font_color = Color(0.984314, 0.94902, 0.211765, 1)

[node name="GameOverMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kaubm")

[node name="Frame" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -112.0
offset_right = 144.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_xapo3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visibility_layer = 524288
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.5
offset_top = -69.0
offset_right = 94.5
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="GameOver" type="Label" parent="VBoxContainer"]
visibility_layer = 524288
layout_mode = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_f4frt")
horizontal_alignment = 1

[node name="Score" type="Label" parent="VBoxContainer"]
visibility_layer = 524288
layout_mode = 2
text = "Score: 123"
label_settings = SubResource("LabelSettings_umx1i")
horizontal_alignment = 1

[node name="TryAgainContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TryAgainButton" type="Button" parent="VBoxContainer/TryAgainContainer"]
visibility_layer = 524288
layout_mode = 2
focus_neighbor_top = NodePath("../../MainMenuContainer/MainMenuButton")
theme = ExtResource("3_reh6t")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_eove6")
theme_override_styles/hover = SubResource("StyleBoxEmpty_eove6")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_eove6")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_eove6")
theme_override_styles/focus = SubResource("StyleBoxEmpty_eove6")
text = "TRY AGAIN"

[node name="MainMenuContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="VBoxContainer/MainMenuContainer"]
visibility_layer = 524288
layout_mode = 2
focus_neighbor_bottom = NodePath("../../TryAgainContainer/TryAgainButton")
theme = ExtResource("3_reh6t")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_eove6")
theme_override_styles/hover = SubResource("StyleBoxEmpty_eove6")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_eove6")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_eove6")
theme_override_styles/focus = SubResource("StyleBoxEmpty_eove6")
text = "MAIN MENU"

[node name="NewHighScore" type="Label" parent="."]
visibility_layer = 524288
offset_left = 144.0
offset_top = 88.0
offset_right = 432.0
offset_bottom = 152.0
text = "New High Score!"
label_settings = SubResource("LabelSettings_ba1w8")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/TryAgainContainer/TryAgainButton" to="." method="_on_try_again_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
